[tool.poetry]
name = "parser591"
version = "0.1.0"
description = ""
authors = ["royle <royletzeng@hyenatek.com>"]

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.27.1"
openpyxl = "^3.0.9"
pyinstaller = "^4.10"
fake-useragent = "^0.1.11"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

